Name:               leaf
Version:            0.5
License:            BSD3
License-File:       LICENSE
Author:             Brian Robertson <raposa.msscripting@gmail.com>
Maintainer:         Brian Robertson <raposa.msscripting@gmail.com>
Category:           FileSystem
Synopsis:           Tagging system
Description:        Tagging system
Stability:          experimental
Tested-With:        GHC==6.12.3
Build-Type:         Simple
Cabal-Version:      >=1.8.0.6
data-files:         LICENSE

library
  exposed-modules:  FileHelper,
                    Constants,
                    DBHelper
  build-depends:    base, directory, sqlite

Executable mssbot
  Main-Is:          Main.hs
  other-modules:    FileHelper, Constants, DBHelper
  Build-Depends:    base >= 4 && <= 5,
                    cmdargs, SHA, bytestring, directory, sqlite
