Name:               leaf
Version:            0.5
License:            BSD3
License-File:       LICENSE
Author:             Brian Robertson <raposa@msscripting.com>
Maintainer:         Brian Robertson <raposa@msscripting.com>
Category:           FileSystem
Synopsis:           Tagging system
Description:        Tagging system
Stability:          experimental
Tested-With:        GHC==7.0.3
Build-Type:         Simple
Cabal-Version:      >=1.8.0.6
data-files:         LICENSE

library
  exposed-modules:  FileHelper,
                    Constants,
                    DBHelper
  build-depends:    base, directory, sqlite

Executable leaf
  Main-Is:          Main.hs
  other-modules:    FileHelper, Constants, DBHelper
  Build-Depends:    base >= 4 && <= 5,
                    cmdargs, SHA, bytestring, directory, sqlite, haskell98
